Fix alignment issue in post shot screen

--- a/plugin/style.scss
+++ b/plugin/style.scss
@@ -280,7 +280,7 @@ input[type=hidden] {
 
 #account-selector-container {
   position: relative;
-  left: -10px;
+  // left: -10px;
   top: -1px;
 
   .thumb-container {
